# backtest-lab

./: .gitignore  LICENSE  Makefile  README.md  TEST_SUMMARY.md  pyproject.toml  pytest.ini  run_tests.py
docs/examples/: README.md  data_loading.py  multiple_timeframes.py  stepwise_analysis.py
src/backtest_lab/analysis/: __init__.py  exceptions.py  plotting.py  signals.py  step.py  wrapper.py
src/backtest_lab/data/: __init__.py  base.py
src/backtest_lab/data/loaders/: stock_loader.py
src/backtest_lab/data/providers/: file_provider.py  yahoo.py
tests/: README.md  conftest.py  test_base.py  test_configuration.py  test_edge_cases.py  test_end_to_end.py  test_examples.py  test_file_provider.py  test_imports.py  test_integration.py  test_performance.py  test_plotting.py  test_step.py  test_stepwise_analysis.py  test_stock_loader.py  test_wrapper.py  test_yahoo_provider.py
