[project]
name = "backtest-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonhatan Haisi",email = "jonathan_haisi@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backtest_lab", from = "src"}]


[tool.poetry.group.dev.dependencies]
yfinance = "^0.2.64"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
pytest-asyncio = "^0.21.0"
pytest-xdist = "^3.3.0"
pytest-timeout = "^2.1.0"
pytest-benchmark = "^4.0.0"
freezegun = "^1.2.2"
responses = "^0.23.0"
factory-boy = "^3.3.0"
faker = "^19.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
